Bug 1342416 - Add JS API to associate scripts with DOM elements after compilation r=nbp